# chicki-briki-retroanalis

./: CMakeLists.txt  README.md
src/: analisator.cpp  dumper.cpp  dumper.h  play.cpp  print_utils.cpp  print_utils.h  retroanalis.cpp  retroanalis.h  state.cpp  state.h
